@@ -5,6 +5,7 @@ srcdir=`dirname $0`
 test -z "$srcdir" && srcdir=.
 
 PKG_NAME="Balsa"
+REQUIRED_AUTOMAKE_VERSION=1.7
 
 (test -f $srcdir/configure.in \
   && test -d $srcdir/src \
